# para

./: .actrc  .dockerignore  .gitignore  .mcp.json.template  CLAUDE.md  CLEANUP_SUCCESS.md  Cargo.toml  DOCKER_ANALYSIS.md  DOCKER_CONFIGURATION_GUIDE.md  DOCKER_CUSTOM_ENVIRONMENTS_PLAN.md  DOCKER_CUSTOM_ENVIRONMENTS_SIMPLE_PLAN.md  DOCKER_FEATURES_MERGED.md  DOCKER_FEATURE_ANALYSIS.md  DOCKER_FEATURE_SUMMARY.md  DOCKER_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_NOTES.md  INTEGRATION_FIX_PLAN.md  INVESTIGATION_REPORT.md  LICENSE  MCP_STATUS_MAPPING.md  README.md  TASK_10_SHELL_COMPLETION.md  TASK_11_SIMPLIFY_CONFIG_WIZARD.md  TASK_12_CLEAN_CONFIG_SYSTEM.md  TASK_13_LEGACY_TEST_COMPAT.md  TASK_13_LEGACY_TEST_WRAPPER.md  TASK_14_CLAUDE_WRAPPER_MODE.md  TASK_15_FRIENDLY_NAMES.md  TASK_15_LEGACY_DISPATCH_SUPPORT.md  TASK_16_INTEGRATE_COMMAND_STRATEGIES.md  TASK_17_SESSION_STATE_CONSISTENCY.md  TASK_18_PLATFORM_SPECIFIC_LAYER.md  TASK_19_ENHANCED_SHELL_COMPLETION.md  TASK_20_SHELL_TO_RUST_MIGRATION.md  TASK_21_HOMEBREW_RUST_BINARY_SUPPORT.md  TASK_22_SIMPLIFY_UNIFIED_SESSION_MANAGEMENT.md  TASK_23_GITHUB_ACTIONS_RUST_TESTS.md  TASK_24_DEPENDABOT_CARGO_INTEGRATION.md  TASK_4_DISPATCH_COMMAND.md  TASK_8_INTEGRATE_COMMAND.md  (+75 more)
para-rs/: .gitignore  CLAUDE.md  Cargo.toml  TASK_10_SHELL_COMPLETION.md  TASK_1_CONFIG_SYSTEM.md  TASK_1_START_COMMAND.md  TASK_2_ERROR_UTILITIES.md  TASK_2_LIST_COMMAND.md  TASK_3_FINISH_COMMAND.md  TASK_3_GIT_OPERATIONS.md  TASK_4_CLI_INTERFACE.md  TASK_5_CLEAN_COMMAND.md  TASK_6_CANCEL_COMMAND.md  TASK_7_CONFIG_WIZARD.md  auto-detect.md  dispatch-test.md  justfile  para.sh  test-file-prompt.md  test_wrapper_config.json  wrapper_demo  wrapper_demo.rs
para-rs/legacytests/: bats_runner.sh  test_common.sh  test_para_backup_integration.bats  test_para_config.bats  test_para_file_input.bats  test_para_integrate.bats  test_para_optimization_validation.bats  test_para_performance_deep.bats  test_para_prompt_features.bats  test_para_units.bats
para-rs/lib/: para-config.sh  para-ide.sh  para-session.sh  para-utils.sh
para-rs/src/: error.rs  lib.rs  main.rs  test_utils.rs  utils.rs
para-rs/src/cli/: completion.rs  mod.rs  parser.rs  tests.rs
para-rs/src/cli/commands/: cancel.rs  clean.rs  complete_command.rs  completion.rs  completion_branches.rs  completion_sessions.rs  config.rs  continue_cmd.rs  dispatch.rs  finish.rs  finish_test.rs  integrate.rs  list.rs  mod.rs  recover.rs  resume.rs  start.rs
para-rs/src/cli/completion/: context.rs  dynamic.rs  generators.rs  mod.rs  tests.rs
para-rs/src/config/: defaults.rs  manager.rs  mod.rs  validation.rs  wizard.rs
para-rs/src/core/: ide.rs  session.rs
para-rs/src/core/git/: branch.rs  conflict.rs  integration.rs  (+4 more)
para-rs/src/platform/: macos.rs  mod.rs  tests.rs
para-rs/src/utils/: error.rs  fs.rs  json.rs  mod.rs  names.rs
(+544 files in other folders)
