[package]
name = "para"
version = "1.1.29"
edition = "2021"
description = "Parallel IDE Workflow Helper - Rust implementation"
license = "MIT"

[lib]
name = "para"
path = "src/lib.rs"
doctest = false


[dependencies]
clap = { version = "4.5.39", features = ["derive", "color", "suggestions"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
dialoguer = "0.11"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[lints.rust]
warnings = "deny"

[dev-dependencies]
tempfile = "3.8"
