[package]
name = "para"
version = "1.1.35"
edition = "2021"
description = "Parallel IDE Workflow Helper - Rust implementation"
license = "MIT"

[lib]
name = "para"
path = "src/lib.rs"
doctest = false

[features]
test-utils = []


[dependencies]
clap = { version = "4.5.39", features = ["derive", "color", "suggestions"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
dialoguer = "0.11"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
atty = "0.2"
ratatui = "0.28"
crossterm = "0.28"
copypasta = "0.10"
fs2 = "0.4"
uuid = { version = "1.5", features = ["v4"] }
ctrlc = "3.4"
libc = "0.2"

[lints.rust]
warnings = "deny"

[dev-dependencies]
tempfile = "3.8"
filetime = "0.2"
