[package]
name = "para"
version = "0.1.0"
edition = "2021"
description = "Parallel IDE Workflow Helper - Rust implementation"
license = "MIT"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.8"
