[package]
name = "para"
version = "0.1.0"
edition = "2021"
description = "Parallel IDE Workflow Helper - Rust implementation"
license = "MIT"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"
regex = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
