[package]
name = "para"
version = "0.1.0"
edition = "2021"
description = "Parallel IDE Workflow Helper - Rust implementation"
license = "MIT"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
